--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,5 +1,9 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add server</button>
-<!-- <p>{{ allowNewServer }}</p> -->    <!--string interpolation-->
-<p [innerText]="allowNewServer"></p>    <!--property binding-->
+<button 
+    class="btn btn-primary"
+    [disabled]="!allowNewServer"
+    (click)="onCreateServer()">Add server</button>
+<!-- <p>{{ allowNewServer }}</p> -->    <!-- string interpolation -->
+<!-- <p [innerText]="allowNewServer"></p> -->    <!-- property binding -->
+<p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
 <app-server></app-server>
