--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -14,6 +14,7 @@
     (click)="onCreateServer()">Add server</button>
 <!-- <p>{{ allowNewServer }}</p> -->    <!-- string interpolation -->
 <!-- <p [innerText]="allowNewServer"></p> -->    <!-- property binding -->
-<p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
 <app-server></app-server>
 <app-server></app-server>
