--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,13 @@
             <!-- <div class="app-servers"></div> -->
             <!-- <app-warning-alert></app-warning-alert>
             <app-success-alert></app-success-alert> -->
+            <button class="btn btn-primary" (click)="onTogglDetails()">Display Details</button>
+            <p *ngIf=showSecret>Secret Password = tuna</p>
+            <div 
+                *ngFor="let logItem of log"
+                [ngStyle]="{backgroundColor: logItem >= 5 ? 'blue' : 'transparent'}"
+                [ngClass]="{'white-text': logItem >= 5}"
+            >{{ logItem }}</div>
         </div>
     </div>
 </div>
